--- a/raccoltoemoraes/src/site/component/header/Header.css
+++ b/raccoltoemoraes/src/site/component/header/Header.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 
 .header{
+    position: fixed;
+    top: 0;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +49,7 @@ label[for="btMenu"]{
 .header a{
     text-decoration: none;
     text-align: center;
-    color: #3d3838;
+    color: #727272;
 }
 
 .header ul li a:hover{
