App comopage contatos prontas cpm todos os links funcionando

--- a/raccoltoemoraes/src/site/component/header/Header.css
+++ b/raccoltoemoraes/src/site/component/header/Header.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 
 .header{
+    z-index: 1;
     position: fixed;
     top: 0;
     background-color: #fff;
@@ -30,6 +31,13 @@ label[for="btMenu"]{
 .logo{
     display: flex;
     align-items: center;
+    width: 5%;
+    margin-left:2%;
+
+}
+
+.logo img{
+    width: 100%;
 }
 
 .header ul{
