--- a/raccoltoemoraes/src/site/page/home/Site.css
+++ b/raccoltoemoraes/src/site/page/home/Site.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-.divsaoSection{
+.divisaoSection{
    width: 100%;
    height: 40px;
 }
 
-/*Home*/
+hr{
+   background-color: #eddbcd;
+   width: 75%;
+   height: 1px;
+   margin-bottom: 3%;
+   
+}
 
+.bntWhatsFixo{
+   height: 80px;
+   position: fixed;
+   bottom: 25px;
+   right: 25px;
+   z-index: 2;
+}
+
+/*Home*/
 .imgHome{
    transition: all 1s;
    animation-name: animacaoApareceDireita;
@@ -17,6 +32,10 @@
 
 .sectionHome{
    display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
    justify-content: center;
    align-items: center;
    padding: 3%; 
@@ -54,7 +73,6 @@
 }
 
 /*Quem somos*/
-
 .sectionQuemSomos{
    transition: 4s;
    font-family:'Poppins';
@@ -63,30 +81,45 @@
    background-color: #f1eff8;
    width: 100%;
    display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
    flex-direction: column;
    justify-content: center;
 }
 
 .titleQuemSomos{
    display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
    flex-direction: row;
 }
 
 .textQuemSomos{
    display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
    flex-direction: column;
-   justify-content: center;
+   justify-content:center;
+   align-items: center;
    width: 100%;   
-}
-
-.textQuemSomos p{
-   margin: 2%;
 }
 
 .textQuemSomos h1{
    font-family:'Poppins', cursive;
    color: #c06014;
-   font-size: 70px;
+   font-size: 60px;
+   margin-bottom: 0%;
+}
+
+.textQuemSomos img{
+   width: 40%;
+   margin-bottom: 2%;
 }
 
 .imgQuemSomos{
@@ -114,6 +147,10 @@
    background-color: #fff;
    width: 100%;
    display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
    justify-content: space-between;
 }
 
@@ -137,14 +174,115 @@
    width: 40%;
 }
 
+/*Contato*/
+.sectionContato{
+   background-color: #c06014;
+   color: #eddbcd;
+   font-family:'Poppins', cursive, bold;   
+   display: flex;
+   display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+   display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+   display: -ms-flexbox;      /* TWEENER - IE 10 */
+   display: -webkit-flex; 
+   flex-direction: column;
+   width: 100%;
+   margin-top: 5%;
+}
+
+.sectionContato h1{
+   font-size: 30px;
+}
+
+.sectionContato p{
+   font-size: 22px;
+}
+
+.redesSociais{
+   position: relative;
+   display: block;
+   width: 100%;
+   height: 130px;  
+}
+
+.whats{
+   display: block;
+   position: absolute;
+   top: 2%;
+   left: 45%;
+   width: 8%;
+}
+
+.face{
+   display: block;
+   position: absolute;
+   top: 2%;
+   left: 15%;
+   width: 8%;
+}
+
+.insta{
+   display: block;
+   position: absolute;
+   top: 2%;
+   right: 15%;
+   width: 8%;
+}
+
+.redesSociais div img:hover{
+   cursor: pointer;
+}
+
+.contatoFooter{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   background-color: #fff;
+   width: 100%; 
+}
+
+.contato{
+   display: flex;
+   width: 100%;
+}
+
+.contato div{
+   margin: 5%;
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+}
+
+.contato div img{
+   height: 54px;
+}
+
+.contato div p{
+   color:#727272;
+}
+
+.logoContato{
+   margin:5%;
+   width: 20%;
+}
+
+.logoContato img{
+   width: 100%;
+}
 
 /*@media*/
+@media screen and (max-width:780px){
+   .bntWhatsFixo{
+      height: 60px;
+      right: 15px;
+   }
 
-@media screen and (max-width:600px){
   /*Home*/
-
    .sectionHome{
       display: flex;
+      display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+      display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+      display: -ms-flexbox;      /* TWEENER - IE 10 */
+      display: -webkit-flex; 
       flex-direction: column;
    }
 
@@ -169,9 +307,12 @@
   }
 
   /*Quem Somos*/
-
   .titleQuemSomos{
-     display: flex;
+      display: flex;
+      display: -webkit-box-flex;      /* OLD - iOS 6-, Safari 3.1-6 */
+      display: -moz-box-flex;         /* OLD - Firefox 19- (buggy but mostly works) */
+      display: -ms-flexbox;      /* TWEENER - IE 10 */
+      display: -webkit-flex; 
      flex-direction: column;
   }
 
@@ -191,8 +332,73 @@
       font-size: 30px;
    }
 
+   /*Contato*/
+   .sectionContato h1{
+      font-size: 20px;
+      margin-top: 5%;
+   }
+
+   .sectionContato p{
+      font-size: 18px;
+      margin-bottom: 5%;
+   }
+
+   .whats{
+      display: block;
+      position: absolute;
+      top: 15%;
+      left: 40%;
+      width: 15%;
+   }
+   
+   .face{
+      display: block;
+      position: absolute;
+      top: 15%;
+      left: 5%;
+      width: 15%;
+   }
+   
+   .insta{
+      display: block;
+      position: absolute;
+      top: 15%;
+      right: 5%;
+      width: 15%;
+   }
+
+   .contatoFooter{
+      width: 100%;
+      flex-direction: column;
+   }
+
+   .contato{
+      flex-direction: column;
+   }
+
+   .contato div{
+      margin: 4% 0% 0% 0% ;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+   }
+   
+   .contato div img{
+      height: 40px;
+   }
+
+   .logoContato{
+      margin: 0%;
+      width: 100%;
+      align-items: center;
+   }
+
+   .logoContato img{
+      width: 32%;
+   }
 }
 
+/*Animações*/
 @keyframes animacaoBolada {
    0%   { 
       text-shadow: 5px 5px 5px #0c0c0c;
